# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-12-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlasticsearch
    * Fix C++ backtrace compilation configuration
    * Enable integration test compilation for the enabled programming languages
    * Split configure flag --with-integration-tests into both
      --with-integration-tests and --with-integration-tests-ran

2014-12-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlcloud and nodefinder after testing tag and security group
      selection with changes for erlcloud 0.9.1
    * Fix CloudI Service API nodes_set discovery update of parameters
    * Fix CloudI Service API nodes_get discovery ec2 output of host

2014-12-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make erlcloud use httpc instead of lhttpc to keep the errors returned
      consistent

2014-11-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug stopping the node discovery method
    * Fix CloudI Service API service_subscriptions function to handle
      non-default scopes
    * Fix CloudI Service API services_search function to search within
      non-default scopes

2014-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix 1.3.3 bug with count_process_dynamic creating service processes
      that have a termination timeout which is not set internally,
      causing CloudI to crash when the new service processes
      attempt to terminate

2014-11-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bad socket handling during external service termination

2014-11-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Log the termination reason when a service is killed after
      the termination timeout is exceeded
    * Fix a bug throwing the TerminateException in the Perl CloudI API

2014-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add remaining fixes for JavaScript CloudI API