@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-12-04 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Enforce TIMEOUT_TERMINATE_MIN based on MaxT setting during configuration
+
 2014-12-03 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Update erlasticsearch
